syntax = "proto3";
package scheme_types;

enum ThresholdSchemeCode {
    Bz03 = 0;
    Sg02 = 1;
    Bls04 = 2;
    Cks05 = 3;
    Frost = 4;
    Sh00 = 5;
}

enum GroupCode {
    Bls12381 = 0;
    Bn254 = 1;
    Ed25519 = 2;
    Rsa512 = 3;
    Rsa1024 = 4;
    Rsa2048 = 5;
    Rsa4096 = 6;
}